@@ -50,7 +50,7 @@ public class EntityCoyote extends EntityFeralWolf {
 	public EntityCoyote(World worldIn) {
 		super(worldIn);
 		this.world = worldIn;
-		this.setSize(0.6F, 0.85F);
+		this.setSize(0.8F, 0.9F);
         this.setTamed(false);
 	}
 	
