@@ -57,7 +57,7 @@ public class EntityDeer extends EntityAnimal {
 	public EntityDeer(World worldIn) {
 		super(worldIn);
 		this.world = worldIn;
-		this.setSize(1F, 2.5F);
+		this.setSize(1F, 1.6F);
 	}
 	
 	protected void entityInit()
