@@ -2,12 +2,12 @@
     "pools": [
         {
             "name": "deer",
-            "rolls": 1,
+            "rolls": 2,
             "entries": [
                 {
                     "type": "item",
                     "name": "betteranimalsplus:venisonraw",
-                    "weight": 1,
+                    "weight": 2,
                     "functions": [
                         {
                             "function": "set_count",
