@@ -2,7 +2,7 @@
     "pools": [
         {
             "name": "deer",
-            "rolls": 1,
+            "rolls": 4,
             "entries": [
                 {
                     "type": "item",
