@@ -7,7 +7,7 @@
                 {
                     "type": "item",
                     "name": "betteranimalsplus:hirschgeistskull",
-                    "weight": 1,
+                    "weight": 200,
                     "functions": [
                         {
                             "function": "set_count",
